--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -4,9 +4,6 @@ on:
   schedule:
     # Once a day at 8 AM
     - cron: 0 8 * * *
-  push:
-    branches:
-      - main
 
 jobs:
   update:
@@ -15,7 +12,4 @@ jobs:
       - uses: JasonEtco/rss-to-readme@v1
         with:
           feed-url: https://dev.to/feed/daknhh
-          readme-section: myblog
-          branch: main
-          path: profile/README.md
-          max: 5
+          readme-section: feed
