--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: JasonEtco/rss-to-readme@v1
         with:
-          feed-url: https://dev.to/feed/daknhh
+          feed-url: https://dakn.ml/index.xml
           readme-section: feed
