--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - uses: JasonEtco/rss-to-readme@v1
         with:
-          feed-url: https://dakn.ml/index.xml
+          feed-url: https://dev.to/feed/daknhh
           readme-section: feed
