--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -5,7 +5,10 @@ on:
     # Once a day at 8 AM
     - cron: 0 8 * * *
   workflow_dispatch:
-  
+
+push:
+  branches:
+    - main
 jobs:
   update:
     runs-on: ubuntu-latest
